# Biomethane_Operator_Assistant

./: .env.example  .gitignore  LICENSE  README.md  SETUP_GUIDE.md  STARTER_GUIDE.md  pyproject.toml  requirements.txt  site_config.json
RAG/docs/: doc1_ad4_model_card.md  doc2_bernard2001_equations.md  doc3_ad4_api_reference.md  doc4_failure_modes_lookup.md  doc5_faq.md
RAG/scripts_for_rag/: generate_model_card.py  ingest_all_docs.py  judge_rag.py  query_rag.py  reranker.py  semantic_chunker.py  setup_rag.sh  vector_store.py
docs/: Biomethane Operator Assistant Summary.docx  Biomethane_Operator_Assistant.docx  biomethane_mcp_tests.md
docs/api/: StateBuffer.md  ad4_enkf.md  ad4_simulator.md  bio_cli.md  bio_methane_operations_mcp_server_v5.md  biomethane_calibration.md  biomethane_chat.md  biomethane_router.md  dataset_profiles.md  ingest_daemon.md  replay_dataset.md  run_mcp_tests.md  scada_mapper.md  seed_plant_state.md  site_config.md
scripts/: run_gemma.sh
src/: StateBuffer.py  ad4_enkf.py  ad4_simulator.py  bio_cli.py  bio_methane_operations_mcp_server_v5.py  biomethane_calibration.py  biomethane_chat.py  biomethane_router.py  dataset_profiles.py  env_config.py  ingest_daemon.py  replay_dataset.py  run_mcp_tests.py  run_mcp_tests_rag_v2.py  scada_mapper.py  seed_plant_state.py
test_scripts/: test_calibration_with_data2.py
