[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "Biomethane_Operator_Assistant"
version = "0.1.0"
description = "Bio-methane operations MCP server with AI integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "tabulate>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "gradio>=5.0.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "langchain-text-splitters>=0.3.0",
]
http = [
    "uvicorn>=0.29.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["test_scripts", "src"]
